--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,16 +23,15 @@ jobs:
           pip install pylint pytest
           pip install -r requirements.txt
             # - name: Enable insecure commands
-      - name: Edit PYTHONPATH
-        run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
-      - name: Set PYTHONPATH
-        run: |
-          echo "::add-path::."
-          export PYTHONPATH="."
+      # - name: Edit PYTHONPATH
+      #   run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
+      # - name: Set PYTHONPATH
+      #   run: |
+      #     echo "::add-path::."
+      #     export PYTHONPATH="."
       - name: Lint
         run: |
           # stop the test if the quality score is below 6
-          python -m pylint src/build/dashbike.py --fail-under=6
           python -m pylint src/build/graphics.py --fail-under=6
           python -m pylint callback/callback_functions.py --fail-under=6
           python -m pylint src/preprocess/import_data.py --fail-under=6
