--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint pytest
           pip install -r requirements.txt
+      - name: Run app.py file
+        run: |
+          python app.py
       - name: Lint
         run: |
           # stop the test if the quality score is below 6
